--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,16 @@
 
 body {
     background-color: lightblue;
+    padding: 0;
+    margin: 0;
+}
+
+.heading {
+    padding: 0;
+}
+
+.nav-button {
+    margin: auto;
 }
 
 .intro {
