Made minor changes to the homepage grid
Fixes PeterKellett/project-2#4

--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,15 @@ body {
 }
 
 .nav-button {
+    display: block;
+    width: 100%;
     margin: auto;
+}
+
+svg {
+    
+    width: 555;
+    
 }
 
 .intro {
