--- a/css/style.css
+++ b/css/style.css
@@ -47,13 +47,19 @@ h1 span {
 }
 
 .dc-select-menu {
+    margin-bottom: 10px;
     background-color: blue;
     color: #fff;
     border: 1px solid white;
     border-radius: 5px;
 }
 
-.charts {
-    width: 100%;
-    padding-top: 10%;
+.chart {
+    
+    border: 3px solid blue;
+    border-radius: 25px;
+}
+
+h5 {
+    margin: 10px 0px 0px;
 }
