--- a/css/style.css
+++ b/css/style.css
@@ -63,3 +63,19 @@ h1 span {
 h5 {
     margin: 10px 0px 0px;
 }
+
+/*---------------------------------------------------------*/
+.test-notice {
+    color: red;
+    border: 2px solid red;
+    text-align: center;
+    margin-bottom: 10px;
+}
+
+.test-notice p:first-of-type {
+    padding-top: 20px;
+}
+
+.test-notice .btn {
+    margin-bottom: 10px;
+}
