--- a/css/style.css
+++ b/css/style.css
@@ -33,6 +33,8 @@ p {
 
 .intro p {
 font-family: 'Rubik', sans-serif;
+padding: 20px 0;
+margin: 0;
 
 }
 
@@ -65,6 +67,10 @@ h5 {
     
     border: 3px solid #3b89cf;
     border-radius: 25px;
+}
+
+.chart p {
+    padding-top: 10px;
 }
 
 /*---------------------------------------------------------*/
