--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Bowlby+One|Lato|Rubik&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Bowlby+One|Rubik&display=swap');
 
 body {
     background-color: lightblue;   
@@ -25,6 +25,11 @@ h5 {
     margin: 0.5rem 0 0;
 }
 
+h4 {
+    text-transform: uppercase;
+    text-align: center;
+    margin: 1rem 0;
+}
 blockquote p {
     font-family: cursive;
     text-align: center;
@@ -53,7 +58,6 @@ a {
     border-radius: 5px;
 }
 
-
 .dc-data-count {
     padding-bottom: 10px;
 }
@@ -70,12 +74,17 @@ a {
 .chart p {
     font-family: cursive;
     text-align: center;
-    padding-top: 10px;
+    padding-top: 0.5rem;
 }
 
 hr {
     height: 3px;
     background-color: #3b89cf;
     border: none;
+}
+
+.disclaimer {
+    text-align: right;
+    font-style: arial;
 }
 /*---------------------------------------------------------*/
